updating bash script to test some additional jdk internal exposures for fixing macos jidesoft laf issue